Advertise install/binaries.html on our main page and from install/specific.html. Remove some redundant links from install/specific.html and change the title of the "DOS" section. Minor reformatting.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -44,6 +44,7 @@
 <A HREF="ftp://gcc.gnu.org/pub/gcc/releases/index.html">Releases</A><BR>
 <A HREF="ftp://gcc.gnu.org/pub/gcc/snapshots/index.html">Snapshots</A><BR>
 <A HREF="mirrors.html">Mirror sites</A>
+<A HREF="install/binaries.html">Binaries</A>
 </P>
 
 <HR>
@@ -159,7 +160,7 @@ href="mailto:gcc@gcc.gnu.org?subject=g77%20Help%20Wanted?">contact us</a>!</p>
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on January 4, 2000.</i></small>
+<small><i>Last modified on January 7, 2000.</i></small>
 </address>
 
 </body>
