--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -6,12 +6,13 @@
 
 <h1 align="center">Host/Target specific installation notes for GCC</h1>
 
-<p>Please read this document carefully <i>before</i> installing the GNU Compiler Collection on your machine.</p>
+<p>Please read this document carefully <i>before</i> installing the
+GNU Compiler Collection on your machine.</p>
 
 <ul>
   <li><a href="#alpha*-dec-linux*">alpha*-dec-linux*</a></li>
   <li><a href="#alpha*-dec-osf*">alpha*-dec-osf*</a></li>
-  <li><a href="#dos">GCC with DOS</a></li>
+  <li><a href="#dos">DOS</a></li>
   <li><a href="#hppa*-hp-hpux*">hppa*-hp-hpux*</a></li>
   <li><a href="#hppa*-hp-hpux9">hppa*-hp-hpux9</a></li>
   <li><a href="#hppa*-hp-hpux10">hppa*-hp-hpux10</a></li>
@@ -51,7 +52,8 @@ see errors of this sort:</p>
 <pre>
   Error: Unknown pseudo-op:  `.arch'
 </pre>
-<p>This is a signal that a new assembler is needed if you want to generate BWX insns for your machine.</p>
+<p>This is a signal that a new assembler is needed if you want to
+generate BWX insns for your machine.</p>
 
 <p>The version of GCC shipped with Red Hat 4.2 (2.7.0.2) has a fault wherein
 it will silently generate incorrect code.  The version shipped with
@@ -130,11 +132,9 @@ flag <code>-mieee</code>.</p>
 
 
 <hr>
-<h3><a name="dos">GCC with DOS</h3>
+<h3><a name="dos">DOS</h3>
 
-<p>A binary distribution is available at <a
-href="ftp://ftp.simtel.net/pub/simtelnet/gnu/djgpp/">Simtel.Net</A> and its
-mirrors.</p>
+<p>Please have a look at our <a href="binaries.html">binaries page</a>.</p>
 
 
 <hr>
@@ -428,8 +428,9 @@ IRIX 5.2.  We recommend you use GNU make instead of the vendor supplied
 make program; however, you may have success with "smake" on IRIX 5.2 if
 you do not have GNU make available.</p>
 
-<p>See <a href="http://reality.sgi.com/ariel/freeware/"> 
-http://reality.sgi.com/ariel/freeware</a> for more information about using GCC on IRIX platforms.</p>
+<p>See <a href="http://reality.sgi.com/ariel/freeware/">
+http://reality.sgi.com/ariel/freeware</a> for more information about
+using GCC on IRIX platforms.</p>
 
 
 <hr>
@@ -459,8 +460,9 @@ happen are when there are library functions that take/return such
 structures. There are very few such library functions. I can only recall
 seeing two of them: inet_ntoa, and semctl. </p>
 
-<p>See <a href="http://reality.sgi.com/ariel/freeware/"> 
-http://reality.sgi.com/ariel/freeware</a> for more information about using GCC on IRIX platforms.</p>
+<p>See <a href="http://reality.sgi.com/ariel/freeware/">
+http://reality.sgi.com/ariel/freeware</a> for more information about
+using GCC on IRIX platforms.</p>
 
 
 <hr>
@@ -476,8 +478,8 @@ if you initially built it with gcc-2.7.2.x.</p>
 
 <p>Starting with Solaris, Sun does not ship a C compiler any more. To
 bootstrap and install GCC you first have to install a pre-built
-compiler, for example from <a href="http://www.sunfreeware.com/">
-http://www.sunfreeware.com</a>.</p>
+compiler, see our <a href="binaries.html">binaries page</a> for
+details.</p>
 
 <p>Sun as 4.X is broken in that it cannot cope with long symbol names.
 A typical error message might look similiar to the following:
@@ -573,17 +575,20 @@ for this platform, too.</p>
 <hr>
 <h3><a name="sparc64-*-*">sparc64-*-*</a></h3>
 
-<p>GCC version 2.95 is not able to compile code correctly for <code>sparc64</code> targets.  Users of the Linux kernel, at least, can use the <code>sparc32</code> program to start up a new shell invocation with an environment that causes <code>configure</code> to recognize (via <code>uname -a</code>) the system as <code>sparc-*-*</code> instead.</p>
+<p>GCC version 2.95 is not able to compile code correctly for
+<code>sparc64</code> targets.  Users of the Linux kernel, at least,
+can use the <code>sparc32</code> program to start up a new shell
+invocation with an environment that causes <code>configure</code> to
+recognize (via <code>uname -a</code>) the system as
+<code>sparc-*-*</code> instead.</p>
 
 
 <hr>
 <h3><a name="win+os2"></a>GCC with Windows or OS/2</h3>
 
 <p>GCC does not currently support Windows, either natively or with the
-cygwin32 dll.  However Mumit Khan has been working on supporting Windows
-with GCC.  You should check out his site if you're interested in Windows
-support.
-<a href="http://www.xraylith.wisc.edu/~khan/software/gnu-win32/">GNU Win32 related projects</a></p>
+cygwin32 dll, but there are some links on our <a href="binaries.html">
+binaries page</a>.</p>
 
 <p>GCC does not currently support OS/2.  However, Andrew Zabolotny has been
 working on a generic os/2 port with pgcc.  The current code code can be found
@@ -600,7 +605,7 @@ will be discarded automatically.</p>
 
 <hr>
 <p><a href="./index.html">Return to the GCC Installation page</a></p>
-<p><i>Last modified on December 9, 1999.</i></p>
+<p><i>Last modified on January 7, 2000.</i></p>
 
 </body>
 </html>
