--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -43,7 +43,7 @@
 <P>
 <A HREF="ftp://gcc.gnu.org/pub/gcc/releases/index.html">Releases</A><BR>
 <A HREF="ftp://gcc.gnu.org/pub/gcc/snapshots/index.html">Snapshots</A><BR>
-<A HREF="mirrors.html">Mirror sites</A>
+<A HREF="mirrors.html">Mirror sites</A><BR>
 <A HREF="install/binaries.html">Binaries</A>
 </P>
 
