Update URL for AIX binaries.

--- a/htdocs/install/binaries.html
+++ b/htdocs/install/binaries.html
@@ -16,7 +16,7 @@ by us; if you have any problems installing them, please contact their
 makers.</p>
 
 <ul>
-<li><a href="ftp://aixpdslib.seas.ucla.edu/pub/gcc/RISC/">AIX</a>
+<li><a href="http://www-frec.bull.com/docs/download.htm">AIX</a>
 
 <li>DOS: <a href="http://www.delorie.com/djgpp/">DJPP</a>
 
