Added FSF CD info; rephrased text.

--- a/htdocs/install/binaries.html
+++ b/htdocs/install/binaries.html
@@ -11,9 +11,9 @@ provide these for all platforms, below you'll find links to binaries for
 various platforms where creating them by yourself is not easy due to various
 reasons.</p>
 
-<p>Please note that these binaries were not created and are not supported
-by us; if you have any problems installing them, please contact their
-makers.</p>
+<p>Please note that we did not create these binaries, nor do we
+support them.  If you have any problems installing them, please
+contact their makers.</p>
 
 <ul>
 <li><a href="http://www-frec.bull.com/docs/download.htm">AIX</a>
@@ -35,9 +35,14 @@ makers.</p>
     Win32 related projects</a> by Mumit Khan
 </ul>
 
-<!--
-  http://www.fsf.org/order/order.html
--->
+In addition to those specific offerings, you can get a binary
+distribution CD-ROM from the <a
+href="http://www.fsf.org/order/order.html">Free Software
+Foundation</a>. It contains binaries for a number of platforms, and
+includes not only GCC, but other stuff as well. The current CD does
+not contain the latest version of GCC, but it should allow
+bootstrapping the compiler. An updated version of that disk is in the
+works.
 
 <hr>
 <p><a href="./index.html">Return to the GCC Installation page</a></p>
