Add picoJava links

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -181,6 +181,10 @@ tahoe. These are listed here just for completeness.
   <br><a href="http://www.village.org/pdp11/faq.html">PDP-11 FAQ</a>
   <br><a href="ftp://ftp.digital.com/pub/DEC/sim/">Simulators</a>
 
+ <li>pj (picoJava)
+  <br>Manufacturer: <a href="http://www.sun.com/">Sun</a>
+  <br><a href="http://www.sun.com/microelectronics/picoJava/>picoJava</a>
+
  <li>romp
   <br>Manufacturer: <a href="http://www.ibm.com">IBM</a>
   <br>Acronym stands for: Research/Office Products MicroProcessor
