--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -183,7 +183,7 @@ tahoe. These are listed here just for completeness.
 
  <li>pj (picoJava)
   <br>Manufacturer: <a href="http://www.sun.com/">Sun</a>
-  <br><a href="http://www.sun.com/microelectronics/picoJava/>picoJava</a>
+  <br><a href="http://www.sun.com/microelectronics/picoJava/">picoJava</a>
 
  <li>romp
   <br>Manufacturer: <a href="http://www.ibm.com">IBM</a>
