--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -20,6 +20,8 @@
   Closures for C++</a> by Thomas M. Breuel, on the design and
   implementation of nested functions in GCC.
 
+  <li><a href="http://www.geocities.com/timjosling/gcc_toc.html">Writing a Compiler Front End to GCC</a> by Tim Josling &lt;<a href="mailto:tej@melbpc.org.au">tej@melbpc.org.au</a>&gt;.
+
   <li><a href="http://members.wri.com/johnnyb/compilers/">A Toy Example Language</a> by Jonathan Bartlett &lt;<a href="mailto:johnnyb@wolfram.com">johnnyb@wolfram.com</a>&gt;.
 
   <li><a href="http://wwwspies.informatik.tu-muenchen.de/personen/pizka/">GNU INSEL Compiler gic</a>.
@@ -309,7 +311,7 @@ papers, hot list pages, potential software/shareware, all known companies, etc.:
 <p><a href="index.html">Return to the GCC home page</a>
 
 <hr>
-<i>Last modified on October 10, 1999.</i>
+<i>Last modified on January 11, 1999.</i>
 
 </body>
 </html>
