--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -17,6 +17,9 @@ Successful
 <p><b>alpha-dec-osf4.0f</b><br>
 Successful
 
+<p><b>alphaev5-dec-osf4.0b</b><br>
+Successful
+
 <p><b>alphaev5-dec-osf4.0d</b><br>
 Successful
 
@@ -175,7 +178,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on January 6, 1999.</i>
+<i>Last modified on January 12, 1999.</i>
 
 </body>
 </html>
