Rename searchbox.html to searchbox.ihtml, as this isn't really an ordinary HTML file.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -155,7 +155,7 @@ href="mailto:gcc@gcc.gnu.org?subject=g77%20Help%20Wanted?">contact us</a>!</p>
 </TR>
 </TABLE>
 
-<!--#include virtual="/searchbox.html"-->
+<!--#include virtual="/searchbox.ihtml"-->
 
 <address>
 <a href="about.html">The GCC team</a>
