--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -157,7 +157,7 @@ addresses or omitting addresses altogether, there isn't a whole lot we
 can do right now.
 
 <a name="searchbox">
-<!--#include virtual="/searchbox.html"-->
+<!--#include virtual="/searchbox.ihtml"-->
 </a>
 <p><a href="/">Return to the gcc home page</a>
 
