Complete "G++ allows to access private structs".

--- a/htdocs/bugs.html
+++ b/htdocs/bugs.html
@@ -39,7 +39,7 @@ version, is now rejected. You should update your code to be C++.
 compiler. This is currently 2.95. Many commonly reported bugs in earlier
 releases are fixed in that version.
 
-<h3><a name="access"></a>G++ allows to access private structs</h3>
+<h3><a name="access"></a>G++ allows to access private types</h3>
 GCC 2.95 incorrectly accepts code like
 <pre>
 struct X{
@@ -50,10 +50,10 @@ struct X{
 X::Y z;
 </pre>
 
-Since <CODE>Y</CODE> is a private member of <CODE>X</CODE>,
-the definition of <CODE>z</CODE> should be
-rejected, but isn't. For other members of classes (functions and
-data), access control is implemented.
+Since <CODE>Y</CODE> is a private member of <CODE>X</CODE>, the
+definition of <CODE>z</CODE> should be rejected, but isn't. This
+applies to structs, classes and types in general; for other members of
+classes (functions and data), access control is implemented.
 
 <h3><a name="export"></a>export not implemented</h3>
 
@@ -218,7 +218,7 @@ void (*fptr)() throw();
 
 <p><a href="index.html">Return to the GCC home page</a> &nbsp;
 <a href="faq.html">Return to the GCC FAQ</a>
-<p><i>Last modified:  August 17, 1999</i>
+<p><i>Last modified:  January 16, 2000</i>
 
 </body>
 </html>
