Minor fixes in the "sparcv9/sparc64/ultrasparc" entry.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -53,7 +53,7 @@ page</a>.</p>
 
   <li><a href="#platform">Platform-specific issues</a>
   <ol>    	  
-    <li><a href="#sparcv9">How to build a compiler for sparcv9/sparc64/ultrasparc</a></li>
+    <li><a href="#sparcv9">How to build a compiler for sparcv9/sparc64/UltraSPARC</a></li>
     <li><a href="#x86eh">Problems with exception handling on x86 platforms</a></li>
     <li><a href="#asmclobber">Problems with <tt>Invalid `asm' statement</tt>s</a></li>
     <li><a href="#linuxkernel">Building Linux kernels</a>  </li>
@@ -520,7 +520,7 @@ no additional flags.</p>
 
 <p>Please read the <a href="install/specific.html">host/target specific installation</a> notes, too.</p>
 
-<h2><a name="sparcv9">How to build a compiler for sparcv9/sparc64/ultrasparc?</a></h2>
+<h2><a name="sparcv9">How to build a compiler for sparcv9/sparc64/UltraSPARC?</a></h2>
 
 <p>GCC up to version 2.95.x does not fully support the SPARC version 9
 architecture. Even though the port for this architecture is in use by
@@ -530,11 +530,11 @@ Solaris 7 assemblers, and it is known to generate bad code for some
 floating-point operations. You don't need to report that there are
 bugs; we know.</p>
 
-<p>Therefore, it is recommended to use gcc in 32-bit mode only on
-UltraSparc machines, even on Solaris 7 or newer.If you absolutely need
+<p>Therefore, it is recommended to use GCC in 32-bit mode only on
+UltraSPARC machines, even on Solaris 7 or newer. If you absolutely need
 to experiment with a compiler for that architecture, you may want to
-try the development snapshots; it contains a number of
-improvements. Hopefully, the next major release of gcc will support
+try our development snapshots, which contain a number of
+improvements. Hopefully, the next major release of GCC will support
 this architecture.</p>
 
 <h2><a name="x86eh">Problems with exception handling on x86 platforms</a></h2>
@@ -1190,7 +1190,7 @@ is declared pure-virtual [class.dtor]/7.</p>
 <hr>
 
 <p><a href="index.html">Return to the GCC home page</a></p>
-<p><i>Last modified: December 24, 1999</i></p>
+<p><i>Last modified: January 17, 2000</i></p>
 
 </body>
 </html>
