--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -98,6 +98,9 @@ Successful
 <p><b>i586-pc-linux-gnulibc1</b><br>
 Successful
 
+<p><b>i386-pc-sco3.2v5.0.5</b><br>
+Successful
+
 <p><b>i586-pc-sco3.2v5.0.5</b><br>
 Successful
 
@@ -178,7 +181,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on January 12, 1999.</i>
+<i>Last modified on January 18, 1999.</i>
 
 </body>
 </html>
