2000-01-18  Bryce McKinlay  <bryce@albatross.co.nz>
        * download.html: Add link to cvsweb.

--- a/htdocs/java/download.html
+++ b/htdocs/java/download.html
@@ -101,6 +101,10 @@ cvs -z9 -d:pserver:anoncvs@anoncvs.cygnus.com:/cvs/java co libgcj
 </pre>
 </small>
 
+<p>
+You can also <a href="http://sourceware.cygnus.com/cgi-bin/cvsweb.cgi/libgcj/?cvsroot=java">
+view the cvs archive</a> via cvsweb.
+
 </td></tr>
 </table>
 
@@ -110,7 +114,7 @@ cvs -z9 -d:pserver:anoncvs@anoncvs.cygnus.com:/cvs/java co libgcj
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: download.html,v 1.5 1999/09/07 00:18:38 green Exp $
+$Id: download.html,v 1.1 1999/09/07 00:34:01 green Exp $
 </small>
 </address>
 
