Updated CNI HTML pages

--- a/htdocs/java/papers/cni/t1262.html
+++ b/htdocs/java/papers/cni/t1262.html
@@ -14,7 +14,7 @@ TITLE="Arrays"
 HREF="t1215.html"><LINK
 REL="NEXT"
 TITLE="Object allocation"
-HREF="t1307.html"></HEAD
+HREF="t1308.html"></HEAD
 ><BODY
 ><DIV
 CLASS="NAVHEADER"
@@ -48,7 +48,7 @@ WIDTH="10%"
 ALIGN="right"
 VALIGN="bottom"
 ><A
-HREF="t1307.html"
+HREF="t1308.html"
 >Next</A
 ></TD
 ></TR
@@ -217,7 +217,11 @@ CLASS="LITERAL"
 compiling <SPAN
 CLASS="ACRONYM"
 >CNI</SPAN
-> code.</P
+> code.  Note that you must also compile
+your C++ source code with <TT
+CLASS="LITERAL"
+>-fno-rtti</TT
+>.</P
 ><P
 >Calling a Java instance method in <SPAN
 CLASS="ACRONYM"
@@ -260,7 +264,7 @@ java::lang:Integer::doubleValue()
 ></P
 ><H2
 ><A
-NAME="AEN303"
+NAME="AEN304"
 >Interface method calls</A
 ></H2
 ><P
@@ -300,7 +304,7 @@ WIDTH="33%"
 ALIGN="right"
 VALIGN="top"
 ><A
-HREF="t1307.html"
+HREF="t1308.html"
 >Next</A
 ></TD
 ></TR
