Various updates concerning Fortran links. By Toon Moene <toon@moene.indiv.nluug.nl>.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -256,10 +256,9 @@ tahoe. These are listed here just for completeness.
 
   <li><a href="http://www.dkuug.dk/JTC1/SC22/WG14/www/docs/n794.htm">C9X draft</a>
 
-  <li><a href="ftp://ftp.ncsa.uiuc.edu/x3j3/doc/standing/007/">F2K draft</a>
+  <li><a href="ftp://ftp.dfrc.nasa.gov/pub/x3j3/ncsa/doc/standing/007/">F2K draft</a>
 
-  <li><a href="http://www.fortran.com/fortran/F77_std/rjcnf.html">FORTRAN 77
-  Standard</a>
+  <li><a href="http://www.fortran.com/F77_std/rjcnf.html">FORTRAN 77 Standard</a>
 
   <li><a href="ftp://sgigate.sgi.com/pub/dwarf/">DWARF v2 spec and sample implementation</a>
 
@@ -300,8 +299,7 @@ papers, hot list pages, potential software/shareware, all known companies, etc.:
 
   <li><a href="http://reality.sgi.com/employees/austern_mti/std-c++/faq.html">comp.std.c++ FAQ</a>
 
-  <li><a href="http://www.fortran.com/fortran/info.html">Fortran FAQs,
-  books and software</a>
+  <li><a href="http://www.fortran.com/info.html">Fortran FAQs, books and software</a>
 
   <li><a href="http://www.mkp.com/books_catalog/1-55860-320-4.asp">New compiler book</a>.  Online appendix includes some compiler links.
 
@@ -311,7 +309,7 @@ papers, hot list pages, potential software/shareware, all known companies, etc.:
 <p><a href="index.html">Return to the GCC home page</a>
 
 <hr>
-<i>Last modified on January 11, 1999.</i>
+<i>Last modified on January 23, 2000.</i>
 
 </body>
 </html>
