--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -62,6 +62,9 @@ Successful
 <p><b>hppa2.0w-hp-hpux11.00</b><br>
 Successful
 
+<p><b>i386-univel-sysv4.2MP</b><br>
+Successful
+
 <p><b>i386-unknown-freebsdelf</b><br>
 Successful
 
@@ -181,7 +184,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on January 18, 1999.</i>
+<i>Last modified on January 24, 1999.</i>
 
 </body>
 </html>
