It's its not it's.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -271,7 +271,7 @@ incomplete, but it covers many of the common cases.  These are listed
 roughly in order of increasing difficulty for the average GCC user,
 meaning someone who is not skilled in the internals of GCC, and where
 difficulty is measured in terms of the time required to fix the bug.
-No alternative is better than any other; each has it's benefits and
+No alternative is better than any other; each has its benefits and
 disadvantages.</p>
 
 <ul>
@@ -1190,7 +1190,7 @@ is declared pure-virtual [class.dtor]/7.</p>
 <hr>
 
 <p><a href="index.html">Return to the GCC home page</a></p>
-<p><i>Last modified: January 17, 2000</i></p>
+<p><i>Last modified: January 25, 2000</i></p>
 
 </body>
 </html>
