--- a/htdocs/steering.html
+++ b/htdocs/steering.html
@@ -9,7 +9,7 @@
 
 <p>The GCC steering committee was founded in 1998 with the intent
 of preventing any particular individual, group or organization from
-getting control over the project. It's primary purpose is to make major
+getting control over the project. Its primary purpose is to make major
 decisions in the best interests of the GCC project and to ensure that
 the project adheres to its fundamental principles found in the project's
 <a href="gccmission.html">mission statement</a>.  [see the original
@@ -89,7 +89,7 @@ Jim Wilson
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on December 11, 1999.</i></small>
+<small><i>Last modified on January 25, 2000.</i></small>
 </address>
 
 </body>
