Include the gcc.gnu.org sitename in the URLs pointing to our test- and benchmark suites.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -85,8 +85,9 @@ href="contribute.html">assigned to the FSF</a> exactly as before.</p>
 <p>We will provide regular, high quality 
 <a href="ftp://gcc.gnu.org/pub/gcc/releases/index.html">releases</a>.
 We want those releases to work well on a variety of native (including
-GNU/Linux) and cross targets and use an extensive <a href="testresults/">test
-suite</a> as well as a <a href="benchresults/">benchmark suite</a> to
+GNU/Linux) and cross targets and use an extensive
+<a href="http://gcc.gnu.org/testresults/">test suite</a> as well as a
+<a href="http://gcc.gnu.org/benchresults/">benchmark suite</a> to
 maintain and improve quality.
 <a href="gcc-2.95/gcc-2.95.2.html">GCC 2.95.2</a> is the current release.
 <hr>
@@ -160,7 +161,7 @@ href="mailto:gcc@gcc.gnu.org?subject=g77%20Help%20Wanted?">contact us</a>!</p>
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on January 7, 2000.</i></small>
+<small><i>Last modified on January 26, 2000.</i></small>
 </address>
 
 </body>
