Refer to our c9xstatus.html page. Remove yet another egcsism.

--- a/htdocs/gcc-2.95/features.html
+++ b/htdocs/gcc-2.95/features.html
@@ -35,7 +35,7 @@
     front-end has been integrated.  A
     <a href="../javaannounce.html">runtime library</a>
     is available separately.
-    <li>ISO C9X support
+    <li><a href="../c9xstatus.html">ISO C9X support</a>
     <li><a href="../news/chill.html">Chill</a> front-end and runtime has been
     integrated.
     <li>Boehm garbage collector support in libobjc.
@@ -80,8 +80,8 @@
   found in GCC 2.8</a>.
 </ul>
 
-<p><a href="../index.html">Return to the egcs home page</a>
-<p><i>Last modified:  January 7, 2000</i>
+<p><a href="../index.html">Return to the home page</a>
+<p><i>Last modified:  January 27, 2000</i>
 
 </body>
 </html>
