--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -28,6 +28,7 @@
 <H2>Development</H2>
 <P>
 <A HREF="contribute.html">Contributing</A><BR>
+<A HREF="contributewhy.html">...Why?</A><BR>
 <A HREF="projects.html">Open projects</A><BR>
 <A HREF="extensions.html">Extensions</A><BR>
 <A HREF="cvs.html">CVS read access</A><BR>
@@ -161,7 +162,7 @@ href="mailto:gcc@gcc.gnu.org?subject=g77%20Help%20Wanted?">contact us</a>!</p>
 <address>
 <a href="about.html">The GCC team</a>
 <br>
-<small><i>Last modified on January 26, 2000.</i></small>
+<small><i>Last modified on January 27, 2000.</i></small>
 </address>
 
 </body>
