2000-01-27  Jason Molenda  (jsm@bugshack.cygnus.com)
	* htdocs/mail.html:  Add link to java-testresults.

--- a/htdocs/java/mail.html
+++ b/htdocs/java/mail.html
@@ -62,9 +62,14 @@ below to view the archives.
 <dd>
    Low volume, moderated, announcements-only mailing list.
 </dd>
+
 <dt><b><a href="/ml/java-discuss/">java-discuss</a></b></dt>
 <dd>
    Moderate volume discussion/question mailing list.
+</dd>
+<dt><b><a href="/ml/java-testresults/">java-testresults</a></b></dt>
+<dd>
+   Moderate volume test results mailing list.
 </dd>
 <dt><b><a href="/ml/java-patches/">java-patches</a></b></dt>
 <dd>
@@ -137,7 +142,7 @@ see our <a href="/ml/#faqs">Sourceware mailing list FAQs</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: mail.html,v 1.5 1999/09/06 19:37:27 green Exp $
+$Id: mail.html,v 1.1 1999/09/07 00:34:01 green Exp $
 </small>
 </address>
 
