2000-01-27  Jason Molenda  (jsm@bugshack.cygnus.com)
	* htdocs/mail.html:  Ah, forgot to add it to the HTML FORM.

--- a/htdocs/java/mail.html
+++ b/htdocs/java/mail.html
@@ -112,6 +112,7 @@ of these lists:
    <option value="java-announce">java-announce
    <option value="java-discuss">java-discuss
    <option value="java-patches">java-patches
+   <option value="java-testresults">java-testresults
    <option value="java-prs">java-prs
   </select>
   <tt>&nbsp;</tt>
@@ -142,7 +143,7 @@ see our <a href="/ml/#faqs">Sourceware mailing list FAQs</a>.
 <a href="about.html">The GCJ team</a>
 <br>
 <small>
-$Id: mail.html,v 1.1 1999/09/07 00:34:01 green Exp $
+$Id: mail.html,v 1.2 2000/01/28 03:47:13 jsm Exp $
 </small>
 </address>
 
