add gcc-micro.html, update cpplib todo list

--- a/htdocs/projects.html
+++ b/htdocs/projects.html
@@ -13,6 +13,10 @@ very much anymore, but who knows?
 <p>There is a separate project list for the <a
 href="proj-cpplib.html">C preprocessor</a>.
 
+<p>We also have a page detailing <a href="gcc-micro.html">optimizer
+inadequacies</a>, if you'd prefer to think about it in terms of problems
+instead of features.
+
 <h2>Changes to support C99 draft</h2>
 
 <p>The (not yet published) next revision of the C standard requires a
