* contribute.html: added links to other CVS pages; cosmetic changes. * cvs.html: small changes. By Rich Churcher <churchmouse@optusnet.com.au>.

--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+<meta name="description" content="Contributing to the GCC project.">
+<meta name="keywords" content="GCC, standards, copyright, patches, contributing">
 <title>Contributing to GCC</title>
 </head>
 
@@ -31,7 +33,6 @@ contributions must meet.</p>
    href="fsf-forms/assignment-instructions.html">copyright assignment
    form</a> and send it in to the FSF.  We are unable to use code from
    you until this is on-file at the FSF, so get that paperwork in!
-   <P>
    This form covers one batch of changes.
 
    <li>
@@ -74,26 +75,31 @@ contributions must meet.</p>
        Note that, unlike some other projects, we do require ChangeLogs
        also for documentation (i.e., .texi files).
   <li> <p>The patch itself.  If you are accessing the <a href="cvs.html">
-       CVS repository</a> at Cygnus, use &quot;cvs update; cvs diff -c3p&quot;;
-       else, use &quot;diff -c3p OLD NEW&quot; or &quot;diff -up OLD NEW&quot;.
-       If your version of diff does not support these options, then get the
-       latest version of GNU diff.</p>
-       <p>We accept patches as plain text (preferred for the compilers
-       themselves), MIME attachments (preferred for the web pages),
-       or as uuencoded gzipped text.</p>
+       CVS repository</a> at Cygnus, use 
+       &quot;<code>cvs update; cvs diff -c3p</code>&quot;; else, use 
+       &quot;<code>diff -c3p OLD NEW</code>&quot; or 
+       &quot;<code>diff -up OLD NEW</code>&quot;.
+       If your version of diff does not support these options, then get 
+       the latest version of GNU diff.</p>
+
   </ul>
+  <p>We accept patches as plain text (preferred for the compilers
+  themselves), MIME attachments (preferred for the web pages),
+  or as uuencoded gzipped text.</p>
 
   <p>When you have all these pieces, bundle them up in a mail message and
   send it to
   <a href="mailto:gcc-patches@gcc.gnu.org">gcc-patches@gcc.gnu.org</a>.
   All patches and related discussion should be sent to the gcc-patches
-  mailinglist.
+  mailinglist.  For further information on the GCC CVS repository, see
+  the <a href="cvs.html">Anonymous read-only CVS access</a> and 
+  <a href="cvswrite.html">Read-write CVS access</a> pages.
 
 <hr>
-<i>Last modified on November 1, 1999.</i>
+<i>Last modified on January 29, 2000.</i>
 
 <hr>
-<a href="">Return to the GNU home page</a>
+<a href="/">Return to the GNU home page</a>
 
 </body>
 </html>
