--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -15,8 +15,8 @@ available read-only to the public at large.
 <p>That way you can pick up any version (including releases) of GCC that
 is in our repository or our <a href="#wwwdocs">web pages</a>.
 
-<p>In addition you can <a
-href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/">browse our CVS
+<p>In addition you can 
+<a href="http://gcc.gnu.org/cgi-bin/cvsweb.cgi/">browse our CVS
 history online</a>.
 
 
@@ -43,7 +43,7 @@ to check out the compiler sources, respectively
 <blockquote><code>cvs -z 9 co wwwdocs</code></blockquote>
 to check out our web pages.
 
-<p>Once you've got the repository checked out <code>cvs update</code>
+<p>Once you've got the repository checked out, <code>cvs update</code>
 will sync your local copy with the repository.  See the CVS manual for
 additional information on how to use CVS. (Besides downloads of recent
 versions of CVS Cyclic Software also has a <a
@@ -140,7 +140,7 @@ the compiler itself.  Use <code>cvs co wwwdocs</code> to check out
 the web pages.
 
 <hr>
-<i>Last modified on December 30, 1999</i>
+<i>Last modified on January 29, 2000</i>
 
 </body>
 </html>
