--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -140,6 +140,9 @@ Successful
 <p><b>powerpc-ibm-aix4.3.2.0</b><br>
 Successful
 
+<p><b>powerpc-ibm-aix4.3.3.0</b><br>
+Successful
+
 <p><b>powerpc-unknown-linux-gnulibc1</b><br>
 Successful
 
@@ -184,7 +187,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on January 24, 1999.</i>
+<i>Last modified on January 31, 1999.</i>
 
 </body>
 </html>
