Another new entry.

--- a/htdocs/gcc-2.95/buildstat.html
+++ b/htdocs/gcc-2.95/buildstat.html
@@ -23,6 +23,9 @@ Successful
 <p><b>alphaev5-dec-osf4.0d</b><br>
 Successful
 
+<p><b>alphaev5-dec-osf4.0f</b><br>
+Successful
+
 <p><b>alphaev56-dec-osf4.0c</b><br>
 Successful
 
